fallback offsets function,split main in ncurses and debug

--- a/source/Makefile
+++ b/source/Makefile
@@ -5,6 +5,7 @@ LD=ld
 LDFLAGS=
 all: i2c-utils.o mpu6050.o
 	$(CC) -ggdb -o main i2c-utils.o mpu6050.o main.c -l$(CLIBRARY)
+	$(CC) -ggdb -o main-dbg i2c-utils.o mpu6050.o main-dbg.c -l$(CLIBRARY)
 
 i2c-utils.o:
 	$(CC) $(CFLAGS) i2c-utils.c
