added log feature, one file per day

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,11 +1,11 @@
 CC=gcc
 CFLAGS=-ggdb -c
-CLIBRARY=ncurses
+CLIBRARY=ncurses -lrt
 LD=ld
 LDFLAGS=
-all: i2c-utils.o mpu6050.o
-	$(CC) -ggdb -o main i2c-utils.o mpu6050.o main.c -l$(CLIBRARY)
-	$(CC) -ggdb -o main-dbg i2c-utils.o mpu6050.o main-dbg.c -l$(CLIBRARY)
+all: i2c-utils.o mpu6050.o log.o
+	$(CC) -ggdb -o main i2c-utils.o mpu6050.o log.o main.c -l$(CLIBRARY)
+	$(CC) -ggdb -o main-dbg i2c-utils.o mpu6050.o log.o main-dbg.c -l$(CLIBRARY)
 
 i2c-utils.o:
 	$(CC) $(CFLAGS) i2c-utils.c
@@ -13,5 +13,8 @@ i2c-utils.o:
 mpu6050.o:
 	$(CC) $(CFLAGS) mpu6050.c
 
+log.o:
+	$(CC) $(CFLAGS) log.c
+	
 clean:
 	rm -fr *.o *.*~ main
